package com.akole.weddingapp.ui.screens.pictures

internal object PictureScreenTestTags {
    const val COLLECTION_GRID = "CollectionGrid"
    const val LOADING_COLLECTION = "LoadingCollection"
    const val UPLOADING_PHOTO_PROGRESS = "UploadingPhotoProgress"
}